Implement rental controller integration tests and add JWT authentication entry point. Provide some code style fixes.